--- a/Clean up DOI list.ipynb
+++ b/Clean up DOI list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -443,9 +443,14 @@
     "from os.path import isfile, join\n",
     "import os\n",
     "import re\n",
+    "import ConfigParser\n",
     "\n",
-    "#add config file\n",
-    "mypath = 'C:/Corpus/MainCorpus/'\n",
+    "config = ConfigParser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "\n",
+    "corpus_directory = config.get('section_directory', 'corpus_directory')\n",
+    "\n",
+    "mypath = corpus_directory\n",
     "\n",
     "\n",
     "doi_list = open(mypath + 'doi_list.txt', 'r+')\n",
