--- a/DOI_List.ipynb
+++ b/DOI_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -20,10 +20,14 @@
     "from os.path import isfile, join\n",
     "import os\n",
     "import re\n",
+    "import ConfigParser\n",
     "\n",
+    "config = ConfigParser.ConfigParser()\n",
+    "config.read('config.ini')\n",
     "\n",
-    "#add the config file\n",
-    "mypath = 'C:/Corpus/MainCorpus/'\n",
+    "corpus_directory = config.get('section_directory', 'corpus_directory')\n",
+    "\n",
+    "mypath = corpus_directory\n",
     "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
     "\n",
     "doi_list = open(mypath + 'doi_list.txt', 'w')\n",
