--- a/Search by DOI with crossref_p3.ipynb
+++ b/Search by DOI with crossref_p3.ipynb
@@ -182,11 +182,17 @@
     "import requests\n",
     "import json\n",
     "import sys\n",
+    "import configparser\n",
     "\n",
-    "#add config file\n",
     "\n",
     "#find current_DOI\n",
-    "mypath = 'C:/Corpus/MainCorpus/'\n",
+    "\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "\n",
+    "corpus_directory = config.get('section_directory', 'corpus_directory')\n",
+    "\n",
+    "mypath = corpus_directory\n",
     "doi_list_edited = open(mypath + 'doi_list_edited.txt', 'r')\n",
     "author_list = open(mypath + 'author_list.txt', 'w')\n",
     "check_duplicates = []\n",
